--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ https://templatemo.com/tm-538-digital-trend
                               <h2 class="mb-4" data-aos="fade-up">My name is <strong>Emer Galvin</strong></h2>
 
                               <p class="mb-0" data-aos="fade-up">I am a PhD candidate at the RCSI in Dublin. 
-                              <br>Please check out my <a href="blog.html"><strong>blog</strong></a> pages, my <a href="#cv"><strong>CV</strong></a> and my <a href="contact.html"><strong>contact</strong></a> page. 
+                              <br>Please check out my <a href="blog.html"><strong>blog</strong></a> pages, my <a href="#cv" class="smoothScroll"><strong>CV</strong></a> and my <a href="contact.html"><strong>contact</strong></a> page. 
                          
                          </div>
 
